# TraidingCatBot

./: CMakeLists.txt  appserver.cpp  appserver.h  binancekline.cpp  binancekline.h  binancestockexchange.cpp  binancestockexchange.h  bybitkline.cpp  bybitkline.h  bybitstockexchange.cpp  bybitstockexchange.h  config.cpp  config.h  core.cpp  core.h  dbsaver.cpp  dbsaver.h  deamon.cpp  deamon.h  filter.cpp  filter.h  gatekline.cpp  gatekline.h  gatestockechan.cpp  gatestockexchange.h  history.cpp  history.h  httpsslquery.cpp  httpsslquery.h  kucoinkline.cpp  kucoinkline.h  kucoinstockexchange.cpp  kucoinstockexchange.h  log.cpp  log.h  main.cpp  mexc.cpp  mexc.h  mexckline.cpp  mexckline.h  (+10 more)
